--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -230,5 +230,7 @@
     "cannot_establish_ob_with_self": "Cannot establish operational binding with self.",
     "no_such_object": "No such object.",
     "cannot_change_replicated_base_name": "Cannot change replicated base name in shadowing.",
-    "cannot_find_local_base_entry_to_replicate": "Cannot find local entry to serve as the base entry of the replicated area."
+    "cannot_find_local_base_entry_to_replicate": "Cannot find local entry to serve as the base entry of the replicated area.",
+    "sob_not_found": "Shadowing agreement ID {{obid}} does not exist.",
+    "unsupported_shadow_update_strategy": "Unsupported shadow update strategy."
 }
