--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -280,5 +280,50 @@
     "no_last_update": "DISP association {{aid}} reported a last update time of {{time}} for operational binding {{obid}}, but this DSA does not know of any such previous update.",
     "last_shadow_update_disputed": "DISP association {{aid}} reported a last update time of {{req_time}} for operational binding {{obid}}, but this DSA believes the last shadow update was {{local_time}}.",
     "sdse_incremental_change_not_understood": "Incremental change for SDSE '{{dn}}' not understood. This change will not be applied.",
-    "sdse_rename_not_agreed_upon": "Cannot rename SDSE '{{old_dn}}' to '{{new_dn}}' because it would fall outside of the shadowed subtree agreed upon by shadowing operational binding {{obid}}. This entry will remain unchanged."
+    "sdse_rename_not_agreed_upon": "Cannot rename SDSE '{{old_dn}}' to '{{new_dn}}' because it would fall outside of the shadowed subtree agreed upon by shadowing operational binding {{obid}}. This entry will remain unchanged.",
+    "disp_association_failed": "DISP association establishment failed. Shadowed area for operational binding {{obid}} will not be updated.",
+    "coordinating_shadow_update@incremental": "Coordinating incremental shadow update for operational binding {{obid}}.",
+    "coordinating_shadow_update@total": "Coordinating total shadow update for operational binding {{obid}}.",
+    "coordinated_shadow_update@incremental": "Coordinated incremental shadow update for operational binding {{obid}}.",
+    "coordinated_shadow_update@total": "Coordinated total shadow update for operational binding {{obid}}.",
+    "error_coordinating_shadow": "Error coordinating shadow update for operational binding {{obid}}. Error code: {{code}}.",
+    "shadow_error_coordinating_shadow@1": "Shadow error (invalid agreement ID) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@2": "Shadow error (inactive agreement) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@3": "Shadow error (invalid information) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@4": "Shadow error (unsupported strategy) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@5": "Shadow error (missed previous) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@6": "Shadow error (full update required) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@7": "Shadow error (unwilling to perform) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@8": "Shadow error (unsuitable timing) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@9": "Shadow error (update already received) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@10": "Shadow error (invalid sequencing) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow@11": "Shadow error (insufficient resources) coordinating shadow update for operational binding {{obid}}.",
+    "shadow_error_coordinating_shadow": "Shadow error coordinating shadow update for operational binding {{obid}}.",
+    "coordinating_shadow_rejected": "Shadow update for operational binding {{obid}} was rejected using reason code {{code}}.",
+    "coordinating_shadow_aborted": "Shadow update for operational binding {{obid}} was aborted using reason code {{code}}.",
+    "coordinating_shadow_timeout": "Shadow update for operational binding {{obid}} timed out.",
+    "coordinating_shadow_other_problem": "Shadow update for operational binding {{obid}} encountered some other problem: {{data}}.",
+    "updating_shadow_update@incremental": "Updating incremental shadow update for operational binding {{obid}}.",
+    "updating_shadow_update@total": "Updating total shadow update for operational binding {{obid}}.",
+    "updated_shadow_update@incremental": "Updated incremental shadow update for operational binding {{obid}}.",
+    "updated_shadow_update@total": "Updated total shadow update for operational binding {{obid}}.",
+    "error_updating_shadow": "Error updating shadow update for operational binding {{obid}}. Error code: {{code}}.",
+    "shadow_error_updating_shadow@1": "Shadow error (invalid agreement ID) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@2": "Shadow error (inactive agreement) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@3": "Shadow error (invalid information) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@4": "Shadow error (unsupported strategy) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@5": "Shadow error (missed previous) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@6": "Shadow error (full update required) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@7": "Shadow error (unwilling to perform) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@8": "Shadow error (unsuitable timing) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@9": "Shadow error (update already received) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@10": "Shadow error (invalid sequencing) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow@11": "Shadow error (insufficient resources) updating shadow update for operational binding {{obid}}.",
+    "shadow_error_updating_shadow": "Shadow error updating shadow update for operational binding {{obid}}.",
+    "updating_shadow_rejected": "Shadow update for operational binding {{obid}} was rejected using reason code {{code}}.",
+    "updating_shadow_aborted": "Shadow update for operational binding {{obid}} was aborted using reason code {{code}}.",
+    "updating_shadow_timeout": "Shadow update for operational binding {{obid}} timed out.",
+    "updating_shadow_other_problem": "Shadow update for operational binding {{obid}} encountered some other problem: {{data}}.",
+    "base_dn_of_supplied_area_not_found": "Base DSE of shadow-supplied area not found. Shadow consumer for operational binding {{obid}} cannot be updated. The operational binding will be terminated.",
+    "no_access_point_for_shadow_ob": "No remote access point for shadow operational binding {{obid}}. This is likely a bug. This operational binding will not be updated."
 }
