Save shadow change increments after modification operations

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -325,5 +325,6 @@
     "updating_shadow_timeout": "Shadow update for operational binding {{obid}} timed out.",
     "updating_shadow_other_problem": "Shadow update for operational binding {{obid}} encountered some other problem: {{data}}.",
     "base_dn_of_supplied_area_not_found": "Base DSE of shadow-supplied area not found. Shadow consumer for operational binding {{obid}} cannot be updated. The operational binding will be terminated.",
-    "no_access_point_for_shadow_ob": "No remote access point for shadow operational binding {{obid}}. This is likely a bug. This operational binding will not be updated."
+    "no_access_point_for_shadow_ob": "No remote access point for shadow operational binding {{obid}}. This is likely a bug. This operational binding will not be updated.",
+    "failed_to_save_incremental_update_step": "Failed to save incremental update step for shadow operational binding {{sob_id}}: {{e}}"
 }
