--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -326,5 +326,8 @@
     "updating_shadow_other_problem": "Shadow update for operational binding {{obid}} encountered some other problem: {{data}}.",
     "base_dn_of_supplied_area_not_found": "Base DSE of shadow-supplied area not found. Shadow consumer for operational binding {{obid}} cannot be updated. The operational binding will be terminated.",
     "no_access_point_for_shadow_ob": "No remote access point for shadow operational binding {{obid}}. This is likely a bug. This operational binding will not be updated.",
-    "failed_to_save_incremental_update_step": "Failed to save incremental update step for shadow operational binding {{sob_id}}: {{e}}"
+    "failed_to_save_incremental_update_step": "Failed to save incremental update step for shadow operational binding {{sob_id}}: {{e}}",
+    "shadow_cp_created": "Shadowed context prefix '{{dn}}' was created as a result of an updateShadow operation.",
+    "shadow_ob_with_no_access_point": "Shadowing Operational Binding {{obid}} had no access point associated with it. This is a bug.",
+    "shadow_update_no_refresh": "No updates for shadow operational binding {{obid}}."
 }
