--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -329,5 +329,28 @@
     "failed_to_save_incremental_update_step": "Failed to save incremental update step for shadow operational binding {{sob_id}}: {{e}}",
     "shadow_cp_created": "Shadowed context prefix '{{dn}}' was created as a result of an updateShadow operation.",
     "shadow_ob_with_no_access_point": "Shadowing Operational Binding {{obid}} had no access point associated with it. This is a bug.",
-    "shadow_update_no_refresh": "No updates for shadow operational binding {{obid}}."
+    "shadow_update_no_refresh": "No updates for shadow operational binding {{obid}}.",
+    "updated_shadow_consumer@scheduled": "Updated shadow consumer for operational binding {{obid}}.",
+
+    "requesting_shadow_update@incremental": "Requesting incremental shadow update for operational binding {{obid}}.",
+    "requesting_shadow_update@total": "Requesting total shadow update for operational binding {{obid}}.",
+    "requested_shadow_update@incremental": "Requested incremental shadow update for operational binding {{obid}}.",
+    "requested_shadow_update@total": "Requested total shadow update for operational binding {{obid}}.",
+    "error_requesting_shadow": "Error requesting shadow update for operational binding {{obid}}. Error code: {{code}}.",
+    "shadow_error_requesting_shadow@1": "Shadow error (invalid agreement ID) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@2": "Shadow error (inactive agreement) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@3": "Shadow error (invalid information) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@4": "Shadow error (unsupported strategy) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@5": "Shadow error (missed previous) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@6": "Shadow error (full update required) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@7": "Shadow error (unwilling to perform) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@8": "Shadow error (unsuitable timing) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@9": "Shadow error (update already received) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@10": "Shadow error (invalid sequencing) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow@11": "Shadow error (insufficient resources) requesting shadow update for operational binding {{obid}}.",
+    "shadow_error_requesting_shadow": "Shadow error requesting shadow update for operational binding {{obid}}.",
+    "requesting_shadow_rejected": "Shadow update request for operational binding {{obid}} was rejected using reason code {{code}}.",
+    "requesting_shadow_aborted": "Shadow update request for operational binding {{obid}} was aborted using reason code {{code}}.",
+    "requesting_shadow_timeout": "Shadow update request for operational binding {{obid}} timed out.",
+    "requesting_shadow_other_problem": "Shadow update request for operational binding {{obid}} encountered some other problem: {{data}}."
 }
