--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -354,5 +354,6 @@
     "requesting_shadow_timeout": "Shadow update request for operational binding {{obid}} timed out.",
     "requesting_shadow_other_problem": "Shadow update request for operational binding {{obid}} encountered some other problem: {{data}}.",
     "sob_no_schedule": "No periodic schedule for shadowing operational binding {{obid}}. Nothing to schedule.",
-    "sob_no_scheduling_needed": "Scheduling for shadowing operational binding {{obid}} is other DSA's responsibility."
+    "sob_no_scheduling_needed": "Scheduling for shadowing operational binding {{obid}} is other DSA's responsibility.",
+    "shadow_incremental_steps_count": "Incremental shadow update for SOB {{obid}} contains {{steps}} steps."
 }
