fix: weird wording

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -303,10 +303,10 @@
     "coordinating_shadow_aborted": "Shadow update for operational binding {{obid}} was aborted using reason code {{code}}.",
     "coordinating_shadow_timeout": "Shadow update for operational binding {{obid}} timed out.",
     "coordinating_shadow_other_problem": "Shadow update for operational binding {{obid}} encountered some other problem: {{data}}.",
-    "updating_shadow_update@incremental": "Updating incremental shadow update for operational binding {{obid}}.",
-    "updating_shadow_update@total": "Updating total shadow update for operational binding {{obid}}.",
-    "updated_shadow_update@incremental": "Updated incremental shadow update for operational binding {{obid}}.",
-    "updated_shadow_update@total": "Updated total shadow update for operational binding {{obid}}.",
+    "updating_shadow_update@incremental": "Applying incremental shadow update for operational binding {{obid}}.",
+    "updating_shadow_update@total": "Applying total shadow update for operational binding {{obid}}.",
+    "updated_shadow_update@incremental": "Applied incremental shadow update for operational binding {{obid}}.",
+    "updated_shadow_update@total": "Applied total shadow update for operational binding {{obid}}.",
     "error_updating_shadow": "Error updating shadow update for operational binding {{obid}}. Error code: {{code}}.",
     "shadow_error_updating_shadow@1": "Shadow error (invalid agreement ID) updating shadow update for operational binding {{obid}}.",
     "shadow_error_updating_shadow@2": "Shadow error (inactive agreement) updating shadow update for operational binding {{obid}}.",
