--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -356,5 +356,6 @@
     "sob_no_schedule": "No periodic schedule for shadowing operational binding {{obid}}. Nothing to schedule.",
     "sob_no_scheduling_needed": "Scheduling for shadowing operational binding {{obid}} is other DSA's responsibility.",
     "shadow_incremental_steps_count": "Incremental shadow update for SOB {{obid}} contains {{steps}} steps.",
-    "shadow_increment_zero_length_mods": "Incremental shadow update for SOB {{obid}} provided a zero-length modification for '{{dn}}', which might be a bug."
+    "shadow_increment_zero_length_mods": "Incremental shadow update for SOB {{obid}} provided a zero-length modification for '{{dn}}', which might be a bug.",
+    "disp_unbind_error": "Error unbinding DISP assocation made to update SOB {{obid}}: {{e}}"
 }
