fix: socket timeouts when providing large shadow update

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -357,5 +357,6 @@
     "sob_no_scheduling_needed": "Scheduling for shadowing operational binding {{obid}} is other DSA's responsibility.",
     "shadow_incremental_steps_count": "Incremental shadow update for SOB {{obid}} contains {{steps}} steps.",
     "shadow_increment_zero_length_mods": "Incremental shadow update for SOB {{obid}} provided a zero-length modification for '{{dn}}', which might be a bug.",
-    "disp_unbind_error": "Error unbinding DISP assocation made to update SOB {{obid}}: {{e}}"
+    "disp_unbind_error": "Error unbinding DISP assocation made to update SOB {{obid}}: {{e}}",
+    "time_to_produce_shadow_update": "Took {{ms}} milliseconds to produce shadow update for SOB {{obid}}."
 }
