fix: Better log messages for no-change shadow updates

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -282,8 +282,10 @@
     "sdse_incremental_change_not_understood": "Incremental change for SDSE '{{dn}}' not understood. This change will not be applied.",
     "sdse_rename_not_agreed_upon": "Cannot rename SDSE '{{old_dn}}' to '{{new_dn}}' because it would fall outside of the shadowed subtree agreed upon by shadowing operational binding {{obid}}. This entry will remain unchanged.",
     "disp_association_failed": "DISP association establishment failed. Shadowed area for operational binding {{obid}} will not be updated.",
+    "coordinating_shadow_update@nochange": "Coordinating no-change shadow update for operational binding {{obid}}.",
     "coordinating_shadow_update@incremental": "Coordinating incremental shadow update for operational binding {{obid}}.",
     "coordinating_shadow_update@total": "Coordinating total shadow update for operational binding {{obid}}.",
+    "coordinated_shadow_update@nochange": "Coordinated no-change shadow update for operational binding {{obid}}.",
     "coordinated_shadow_update@incremental": "Coordinated incremental shadow update for operational binding {{obid}}.",
     "coordinated_shadow_update@total": "Coordinated total shadow update for operational binding {{obid}}.",
     "error_coordinating_shadow": "Error coordinating shadow update for operational binding {{obid}}. Error code: {{code}}.",
@@ -303,8 +305,7 @@
     "coordinating_shadow_aborted": "Shadow update for operational binding {{obid}} was aborted using reason code {{code}}.",
     "coordinating_shadow_timeout": "Shadow update for operational binding {{obid}} timed out.",
     "coordinating_shadow_other_problem": "Shadow update for operational binding {{obid}} encountered some other problem: {{data}}.",
-    "updating_shadow_update@incremental": "Applying incremental shadow update for operational binding {{obid}}.",
-    "updating_shadow_update@total": "Applying total shadow update for operational binding {{obid}}.",
+    "updated_shadow_update@nochange": "Submitted no-change shadow update for operational binding {{obid}}.",
     "updated_shadow_update@incremental": "Applied incremental shadow update for operational binding {{obid}}.",
     "updated_shadow_update@total": "Applied total shadow update for operational binding {{obid}}.",
     "error_updating_shadow": "Error updating shadow update for operational binding {{obid}}. Error code: {{code}}.",
@@ -330,8 +331,6 @@
     "shadow_cp_created": "Shadowed context prefix '{{dn}}' was created as a result of an updateShadow operation.",
     "shadow_ob_with_no_access_point": "Shadowing Operational Binding {{obid}} had no access point associated with it. This is a bug.",
     "shadow_update_no_refresh": "No updates for shadow operational binding {{obid}}.",
-    "updated_shadow_consumer@scheduled": "Updated shadow consumer for operational binding {{obid}}.",
-
     "requesting_shadow_update@incremental": "Requesting incremental shadow update for operational binding {{obid}}.",
     "requesting_shadow_update@total": "Requesting total shadow update for operational binding {{obid}}.",
     "requested_shadow_update@incremental": "Requested incremental shadow update for operational binding {{obid}}.",
